package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"syscall"

	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"

	orderV1 "github.com/alexander-kartavtsev/starship/shared/pkg/openapi/order/v1"
	paymentV1 "github.com/alexander-kartavtsev/starship/shared/pkg/proto/payment/v1"
)

const grpcPort = 50052

type paymentService struct {
	paymentV1.UnimplementedPaymentServiceServer
	orders map[string]*orderV1.OrderDto
}

func (s *paymentService) PayOrder(_ context.Context, req *paymentV1.PayOrderRequest) (*paymentV1.PayOrderResponse, error) {
	return &paymentV1.PayOrderResponse{}, nil
}

func main() {
	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", grpcPort))
	if err != nil {
		log.Printf("failed to listen: %v\n", err)
		return
	}
	defer func() {
		if cerr := lis.Close(); cerr != nil {
			log.Printf("failed to close listener: %v\n", cerr)
		}
	}()

	s := grpc.NewServer()

	service := &paymentService{
		orders: GetAllOrders(),
	}

	paymentV1.RegisterPaymentServiceServer(s, service)

	// –í–∫–ª—é—á–∞–µ–º —Ä–µ—Ñ–ª–µ–∫—Å–∏—é –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏
	reflection.Register(s)

	go func() {
		log.Printf("\"üöÄ gRPC server listening on %d\n", grpcPort)
		err := s.Serve(lis)
		if err != nil {
			log.Printf("failed to serve %v\n", err)
			return
		}
	}()

	// Graceful shutdown
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit
	log.Println("üõë Shutting down gRPC server...")
	s.GracefulStop()
	log.Println("‚úÖ Server stopped")
}
